--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>HELLO THERE</h1>
-    <h3>general kenobi</h3>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block head %}
+<title>InPoster Home</title>
+{% endblock %}
+
+{% block body %}
+<h1>InPoster</h1>
+<h1>There is only 1 InPoster among us</h1>
+{% endblock %}
