--- a/src/templates/sender-signup.html
+++ b/src/templates/sender-signup.html
@@ -2,16 +2,17 @@
 {% block head %}
 <title>Register a sender</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/sender-signup.css') }}">
+<script src="{{ url_for('static', filename='script/sender-signup.js') }}"></script>
 {% endblock %}
 {% block body %}
 <h1>Sign up as a sender</h1>
 <form action="sender-signup">
     <ul>
-        <li><input type="text" name="firstname" placeholder="First Name"></li>
-        <li><input type="text" name="lastname" placeholder="Last Name"></li>
-        <li><input type="text" name="login" placeholder="Login"></li>
-        <li><input type="password" name="password" placeholder="Password"></li>
-        <li><input type="password" name="repassword" placeholder="Confirm Password"></li>
+        <li><input type="text" id="firstname" name="firstname" placeholder="First Name"></li>
+        <li><input type="text" id="lastname" name="lastname" placeholder="Last Name"></li>
+        <li><input type="text" id="login" name="login" placeholder="Login"></li>
+        <li><input type="password" id="password" name="password" placeholder="Password"></li>
+        <li><input type="password" id="repassword" name="repassword" placeholder="Confirm Password"></li>
         <li><label for="Gender">Gender:</label>
         <input type="radio" name="sex" value="male"><label for="male">Male</label>
         <input type="radio" name="sex" value="female"><label for="female">Female</label></li>
