fixed form bugs

--- a/src/templates/sender-signup.html
+++ b/src/templates/sender-signup.html
@@ -29,12 +29,12 @@
             <span id="repassword-message"></span>
         </li>
         <li><label for="Gender">Gender:</label>
-        <input type="radio" id="gender-male" name="gender" value="male" checked><label for="male">Male</label>
-        <input type="radio" id="gender-female"name="gender" value="female"><label for="female">Female</label></li>
+        <input type="radio" id="gender-male" name="sex" value="M" checked><label for="male">Male</label>
+        <input type="radio" id="gender-female"name="sex" value="F"><label for="female">Female</label></li>
         <span id="gender-message"></span>
         <li>
             <label for="photo">Upload your photo:</label>
-            <input type="file" name="photo" id="photo" accept=".png,.jpg,.jpeg">
+            <input type="file" name="photo" id="photo">
             <span id="photo-message"></span>
         </li>
         <li>
