--- a/src/templates/sender-signup.html
+++ b/src/templates/sender-signup.html
@@ -40,7 +40,7 @@
                     <button class="btn">Upload photo</button>
                     <input type="file" name="photo" id="photo">
                   </div>
-                <p id="photo-message"></p>
+                <p id="photo-message">Nie wybrano pliku</p>
             </li>
             <li>
                 <input id="submit-form"type="submit" value="Sign Up">
