--- a/src/templates/sender-login.html
+++ b/src/templates/sender-login.html
@@ -1,12 +1,20 @@
 {% extends 'base.html' %}
 {% block head %}
 <title>Register a sender</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/sender-login.css') }}">
+<!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/sender-login.css') }}"> -->
 {% endblock %}
 {% block body %}
 login page will be here
-
-<form action="">
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+    {% endwith %}
+<form action="/sender/login" method="POST" enctype="multipart/form-data">
     <ul>
         <li>
             <input type="text" name="login" id="login" placeholder="login">
@@ -14,8 +22,10 @@ login page will be here
         <li>
             <input type="password" name="password" id="password" placeholder="password">
         </li>
+        <li>
+            <input type="submit" value="Sign In">
+        </li>
     </ul>
 </form>
-
 
 {% endblock %}
