--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,6 +13,8 @@
         <ul class="menu">
             <li class="item"><a href="/">Home</a></li>
             <li class="item"><a href="/sender/sign-up">Sender - Register</a></li>
+            <li class="item"><a href="/sender/login">Sender - Login</a></li>
+            <li class="item"><a href="/sender/logout">Sender - Logout</a></li>
         </ul>
     </nav>
     {% block body %}{% endblock %}
