minor page style fixes

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -72,3 +72,9 @@ footer img {
     width: 60%;
     margin: auto;
 }
+
+#name {
+    font-size: smaller;
+    font-weight: lighter;
+    font-style: italic;
+}
