--- a/src/templates/sender-login.html
+++ b/src/templates/sender-login.html
@@ -1,31 +1,34 @@
 {% extends 'base.html' %}
 {% block head %}
 <title>Register a sender</title>
-<!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/sender-login.css') }}"> -->
+<link rel="stylesheet" href="{{ url_for('static', filename='css/auth-pages.css') }}">
 {% endblock %}
 {% block body %}
-login page will be here
-{% with messages = get_flashed_messages() %}
+<div class="content">
+    <header>
+        Log in as a sender
+    </header>
+    {% with messages = get_flashed_messages() %}
     {% if messages %}
-        <ul class=flashes>
+    <ul class=flashes>
         {% for message in messages %}
         <li>{{ message }}</li>
         {% endfor %}
-        </ul>
+    </ul>
     {% endif %}
     {% endwith %}
-<form action="/sender/login" method="POST" enctype="multipart/form-data">
-    <ul>
-        <li>
-            <input type="text" name="login" id="login" placeholder="login">
-        </li>
-        <li>
-            <input type="password" name="password" id="password" placeholder="password">
-        </li>
-        <li>
-            <input type="submit" value="Sign In">
-        </li>
-    </ul>
-</form>
-
+    <form action="/sender/login" method="POST" enctype="multipart/form-data">
+        <ul>
+            <li>
+                <input type="text" name="login" id="login" placeholder="login">
+            </li>
+            <li>
+                <input type="password" name="password" id="password" placeholder="password">
+            </li>
+            <li>
+                <input type="submit" value="Sign In">
+            </li>
+        </ul>
+    </form>
+</div>
 {% endblock %}
