--- a/src/templates/sender-signup.html
+++ b/src/templates/sender-signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block head %}
 <title>Register a sender</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/sender-signup.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/auth-pages.css') }}">
 <script src="{{ url_for('static', filename='script/sender-signup.js') }}"></script>
 {% endblock %}
 {% block body %}
@@ -11,11 +11,11 @@
     </header>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-        <ul class=flashes>
+    <ul class=flashes>
         {% for message in messages %}
         <li>{{ message }}</li>
         {% endfor %}
-        </ul>
+    </ul>
     {% endif %}
     {% endwith %}
     <form action="/sender/sign-up" method="POST" id="signup-form" enctype="multipart/form-data">
@@ -49,7 +49,7 @@
                 <p id="address-message"></p>
             </li>
             <li>
-                <input id="submit-form"type="submit" value="Sign Up">
+                <input id="submit-form" type="submit" value="Sign Up">
                 <span id="submit-message"></span>
             </li>
         </ul>
