--- a/src/templates/sender-login.html
+++ b/src/templates/sender-login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block head %}
-<title>Register a sender</title>
+<title>Login as a sender</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/auth-pages.css') }}">
 {% endblock %}
 {% block body %}
@@ -8,23 +8,16 @@
     <header>
         Log in as a sender
     </header>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul class=flashes>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
     <form action="/sender/login" method="POST" enctype="multipart/form-data">
         <ul>
             <li>
                 <input type="text" name="login" id="login" placeholder="login">
+                <p id="login-message"></p>
             </li>
             <li>
                 <input type="password" name="password" id="password" placeholder="password">
             </li>
+            <p>You don't have an account? <button><a href="{{ url_for('sender_signup_get')}}">Register now!</a></button></p> 
             <li>
                 <input type="submit" value="Sign In">
             </li>
