--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -20,7 +20,6 @@ nav, footer {
     align-items: center;
     display: flex;
     background-color: #272C28;
-    align-items: center;
 }
 
 nav ul, footer ul {
@@ -77,4 +76,20 @@ footer img {
     font-size: smaller;
     font-weight: lighter;
     font-style: italic;
+}
+
+.flashes {
+    justify-content: space-evenly;
+    align-items: center;
+    display: flex;
+}
+
+.flashes ul li {
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: #edce00;
+    list-style: none;
+    border: 1px solid #edce00;
+    border-radius: 15px;
+    display: inline-block;
 }
