added label creation

--- a/src/templates/sender-signup.html
+++ b/src/templates/sender-signup.html
@@ -12,11 +12,11 @@
     <form action="/sender/sign-up" method="POST" id="signup-form" enctype="multipart/form-data">
         <ul>
             <li>
-                <input type="text" id="firstname" name="firstname" placeholder="First Name">
+                <input type="text" id="firstname" name="firstname" placeholder="first name">
                 <p id="firstname-message"></p>
             </li>
             <li>
-                <input type="text" id="lastname" name="lastname" placeholder="Last Name">
+                <input type="text" id="lastname" name="lastname" placeholder="last name">
                 <p id="lastname-message"></p>
             </li>
             <li>
@@ -24,15 +24,15 @@
                 <p id="email-message"></p>
             </li>
             <li>
-                <input type="text" id="login" name="login" placeholder="Login">
+                <input type="text" id="login" name="login" placeholder="login">
                 <p id="login-message"></p>
             </li>
             <li>
-                <input type="password" id="password" name="password" placeholder="Password">
+                <input type="password" id="password" name="password" placeholder="password">
                 <p id="password-message"></p>
             </li>
             <li>
-                <input type="password" id="repassword" name="repassword" placeholder="Confirm Password">
+                <input type="password" id="repassword" name="repassword" placeholder="confirm password">
                 <p id="repassword-message"></p>
             </li>
             <li>
