--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block head %}
-<title>Register a sender</title>
+<title>Dashboard</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css')}}">
 {% endblock %}
 {% block body %}
 <div class="content">
     <header>
         Dashboard
     </header>
+    {% block dash_content %}{% endblock %}
 </div>
 {% endblock %}
