--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -2,6 +2,7 @@
 {% block head %}
 <title>Dashboard</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css')}}">
+{% block dash_head %} {% endblock %}
 {% endblock %}
 {% block body %}
 <div class="content">
