--- a/src/templates/dashboard-edit.html
+++ b/src/templates/dashboard-edit.html
@@ -7,16 +7,16 @@
 <form method="POST" enctype="multipart/form-data">
     <ul>
         <li>
-            <input type="text" name="name" placeholder="recipient name">
+            <input type="text" name="name" placeholder="recipient name" value="{{label['name']}}">
         </li>
         <li>
-            <input type="text" name="address" placeholder="recipient address">
+            <input type="text" name="address" placeholder="recipient address" value="{{label['address']}}">
         </li>
         <li>
-            <input type="text" name="box" placeholder="box id">
+            <input type="text" name="box" placeholder="box id" value="{{label['box']}}">
         </li>
         <li>
-            <input type="text" name="dimensions" placeholder="dimensions">
+            <input type="text" name="dimensions" placeholder="dimensions" value="{{label['dimensions']}}">
         </li>
         <li>
             <input type="submit" value="Save">
