--- a/src/templates/sender-login.html
+++ b/src/templates/sender-login.html
@@ -8,7 +8,7 @@
     <header>
         Log in as a sender
     </header>
-    <form action="/sender/login" method="POST" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data">
         <ul>
             <li>
                 <input type="text" name="login" id="login" placeholder="login">
@@ -17,7 +17,7 @@
             <li>
                 <input type="password" name="password" id="password" placeholder="password">
             </li>
-            <p>You don't have an account? <button><a href="{{ url_for('sender_signup_get')}}">Register now!</a></button></p> 
+            <p>You don't have an account? <button><a href="{{ url_for('sender_signup')}}">Register now!</a></button></p> 
             <li>
                 <input type="submit" value="Sign In">
             </li>
